etapa7/y.output
Terminals unused in grammar

    TOKEN_ERROR


State 73 conflicts: 1 shift/reduce
State 74 conflicts: 11 shift/reduce
State 78 conflicts: 2 shift/reduce
State 93 conflicts: 1 shift/reduce
State 94 conflicts: 1 shift/reduce
State 98 conflicts: 1 shift/reduce
State 99 conflicts: 1 shift/reduce
State 103 conflicts: 1 shift/reduce
State 124 conflicts: 2 shift/reduce
State 130 conflicts: 11 shift/reduce
State 131 conflicts: 1 shift/reduce
State 132 conflicts: 1 shift/reduce
State 133 conflicts: 1 shift/reduce
State 134 conflicts: 1 shift/reduce
State 135 conflicts: 1 shift/reduce
State 136 conflicts: 1 shift/reduce
State 137 conflicts: 1 shift/reduce
State 138 conflicts: 1 shift/reduce
State 139 conflicts: 1 shift/reduce
State 140 conflicts: 1 shift/reduce
State 158 conflicts: 2 shift/reduce
State 160 conflicts: 1 shift/reduce
State 162 conflicts: 1 shift/reduce
State 164 conflicts: 1 shift/reduce
State 165 conflicts: 1 shift/reduce
State 167 conflicts: 2 shift/reduce
State 168 conflicts: 1 shift/reduce
State 187 conflicts: 1 shift/reduce
State 192 conflicts: 6 shift/reduce, 2 reduce/reduce
State 194 conflicts: 1 shift/reduce
State 196 conflicts: 1 shift/reduce
State 212 conflicts: 1 shift/reduce
State 216 conflicts: 1 shift/reduce
State 217 conflicts: 1 shift/reduce


Grammar

    0 $accept: program $end

    1 program: declaration_list

    2 declaration_list: declaration declaration_list
    3                 | %empty

    4 declaration: declaration_function
    5            | declaration_global

    6 declaration_global: declaration_global_int
    7                   | declaration_global_char
    8                   | declaration_global_float

    9 semi_column: ';'
   10            | error

   11 declaration_global_int: KW_INT TK_IDENTIFIER ':' expression semi_column
   12                       | KW_INT TK_IDENTIFIER '[' LIT_INTEGER ']' semi_column
   13                       | KW_INT TK_IDENTIFIER '[' LIT_INTEGER ']' ':' array_val semi_column
   14                       | KW_INT TK_IDENTIFIER '[' error ']' ':'
   15                       | KW_INT TK_IDENTIFIER error

   16 declaration_global_char: KW_CHAR TK_IDENTIFIER ':' expression semi_column
   17                        | KW_CHAR TK_IDENTIFIER '[' LIT_INTEGER ']' semi_column
   18                        | KW_CHAR TK_IDENTIFIER '[' LIT_INTEGER ']' ':' array_val semi_column
   19                        | KW_CHAR TK_IDENTIFIER '[' error ']' ':'
   20                        | KW_CHAR TK_IDENTIFIER error

   21 declaration_global_float: KW_FLOAT TK_IDENTIFIER ':' LIT_INTEGER OPERATOR_DIV LIT_INTEGER semi_column
   22                         | KW_FLOAT TK_IDENTIFIER '[' LIT_INTEGER ']' semi_column
   23                         | KW_FLOAT TK_IDENTIFIER '[' error ']'
   24                         | KW_FLOAT TK_IDENTIFIER error

   25 array_val: LIT_INTEGER array_val
   26          | LIT_INTEGER
   27          | LIT_CHAR array_val
   28          | LIT_CHAR
   29          | ','

   30 declaration_function: KW_INT TK_IDENTIFIER '(' declaration_function_args_or_empty ')' declaration_function_body
   31                     | KW_CHAR TK_IDENTIFIER '(' declaration_function_args_or_empty ')' declaration_function_body
   32                     | KW_FLOAT TK_IDENTIFIER '(' declaration_function_args_or_empty ')' declaration_function_body
   33                     | KW_INT error '(' declaration_function_args_or_empty ')' declaration_function_body
   34                     | KW_CHAR error '(' declaration_function_args_or_empty ')' declaration_function_body
   35                     | KW_FLOAT error '(' declaration_function_args_or_empty ')' declaration_function_body
   36                     | TK_IDENTIFIER '(' declaration_function_args_or_empty ')'

   37 declaration_function_args_or_empty: declaration_function_args
   38                                   | %empty

   39 declaration_function_args: KW_INT TK_IDENTIFIER fun_args_comma declaration_function_args
   40                          | KW_CHAR TK_IDENTIFIER fun_args_comma declaration_function_args
   41                          | KW_FLOAT TK_IDENTIFIER fun_args_comma declaration_function_args
   42                          | KW_INT TK_IDENTIFIER
   43                          | KW_CHAR TK_IDENTIFIER
   44                          | KW_FLOAT TK_IDENTIFIER
   45                          | error TK_IDENTIFIER
   46                          | KW_INT error
   47                          | KW_CHAR error
   48                          | KW_FLOAT error

   49 fun_args_comma: ','
   50               | error

   51 declaration_function_body: command

   52 function_call: TK_IDENTIFIER '(' function_call_args_or_empty ')'

   53 function_call_args_or_empty: function_call_args
   54                            | %empty

   55 function_call_args: expression
   56                   | expression ',' function_call_args

   57 command: attribution
   58        | flux_control
   59        | print
   60        | return
   61        | command_block
   62        | %empty

   63 command_block: '{' command_list '}'

   64 command_list: command semi_column command_list
   65             | label command_list
   66             | %empty

   67 attribution: TK_IDENTIFIER '=' expression
   68            | TK_IDENTIFIER '[' expression ']' '=' expression
   69            | TK_IDENTIFIER '[' expression ']' error expression
   70            | TK_IDENTIFIER error expression

   71 expression: LIT_INTEGER
   72           | LIT_CHAR
   73           | TK_IDENTIFIER
   74           | KW_READ
   75           | TK_IDENTIFIER '[' expression ']'
   76           | expression OPERATOR_ADD expression
   77           | expression OPERATOR_SUB expression
   78           | expression OPERATOR_MULT expression
   79           | expression OPERATOR_DIV expression
   80           | expression OPERATOR_LT expression
   81           | expression OPERATOR_LTE expression
   82           | expression OPERATOR_GT expression
   83           | expression OPERATOR_GTE expression
   84           | expression OPERATOR_EQ expression
   85           | expression OPERATOR_DIF expression
   86           | '(' expression ')'
   87           | function_call
   88           | expression error expression
   89           | expression error
   90           | error expression

   91 print: KW_PRINT print_rest

   92 print_rest: LIT_STRING
   93           | LIT_STRING print_comma print_rest
   94           | expression
   95           | expression print_comma print_rest

   96 print_comma: ','
   97            | error

   98 return: KW_RETURN return_expression

   99 return_expression: expression
  100                  | error

  101 flux_control: KW_IF flux_control_expression KW_THEN command
  102             | KW_IF flux_control_expression KW_THEN command KW_ELSE command
  103             | KW_WHILE flux_control_expression command
  104             | go_to

  105 flux_control_expression: expression
  106                        | error
  107                        | '(' error ')'

  108 label: TK_IDENTIFIER ':'

  109 go_to: KW_GOTO TK_IDENTIFIER


Terminals, with rules where they appear

    $end (0) 0
    '(' (40) 30 31 32 33 34 35 36 52 86 107
    ')' (41) 30 31 32 33 34 35 36 52 86 107
    ',' (44) 29 49 56 96
    ':' (58) 11 13 14 16 18 19 21 108
    ';' (59) 9
    '=' (61) 67 68
    '[' (91) 12 13 14 17 18 19 22 23 68 69 75
    ']' (93) 12 13 14 17 18 19 22 23 68 69 75
    '{' (123) 63
    '}' (125) 63
    error (256) 10 14 15 19 20 23 24 33 34 35 45 46 47 48 50 69 70 88 89 90 97 100 106 107
    KW_CHAR <symbol> (258) 16 17 18 19 20 31 34 40 43 47
    KW_INT <symbol> (259) 11 12 13 14 15 30 33 39 42 46
    KW_FLOAT <symbol> (260) 21 22 23 24 32 35 41 44 48
    KW_IF (261) 101 102
    KW_THEN (262) 101 102
    KW_ELSE (263) 102
    KW_WHILE (264) 103
    KW_GOTO (265) 109
    KW_READ (266) 74
    KW_PRINT (267) 91
    KW_RETURN (268) 98
    OPERATOR_ADD <symbol> (269) 76
    OPERATOR_SUB <symbol> (270) 77
    OPERATOR_MULT <symbol> (271) 78
    OPERATOR_DIV <symbol> (272) 21 79
    OPERATOR_LTE <symbol> (273) 81
    OPERATOR_LT <symbol> (274) 80
    OPERATOR_GTE <symbol> (275) 83
    OPERATOR_GT <symbol> (276) 82
    OPERATOR_EQ <symbol> (277) 84
    OPERATOR_DIF <symbol> (278) 85
    TK_IDENTIFIER <symbol> (279) 11 12 13 14 15 16 17 18 19 20 21 22 23 24 30 31 32 36 39 40 41 42 43 44 45 52 67 68 69 70 73 75 108 109
    LIT_INTEGER <symbol> (280) 12 13 17 18 21 22 25 26 71
    LIT_CHAR <symbol> (281) 27 28 72
    LIT_STRING <symbol> (282) 92 93
    TOKEN_ERROR (283)


Nonterminals, with rules where they appear

    $accept (39)
        on left: 0
    program <ast> (40)
        on left: 1
        on right: 0
    declaration_list <ast> (41)
        on left: 2 3
        on right: 1 2
    declaration <ast> (42)
        on left: 4 5
        on right: 2
    declaration_global <ast> (43)
        on left: 6 7 8
        on right: 5
    semi_column <ast> (44)
        on left: 9 10
        on right: 11 12 13 16 17 18 21 22 64
    declaration_global_int <ast> (45)
        on left: 11 12 13 14 15
        on right: 6
    declaration_global_char <ast> (46)
        on left: 16 17 18 19 20
        on right: 7
    declaration_global_float <ast> (47)
        on left: 21 22 23 24
        on right: 8
    array_val <ast> (48)
        on left: 25 26 27 28 29
        on right: 13 18 25 27
    declaration_function <ast> (49)
        on left: 30 31 32 33 34 35 36
        on right: 4
    declaration_function_args_or_empty <ast> (50)
        on left: 37 38
        on right: 30 31 32 33 34 35 36
    declaration_function_args <ast> (51)
        on left: 39 40 41 42 43 44 45 46 47 48
        on right: 37 39 40 41
    fun_args_comma <ast> (52)
        on left: 49 50
        on right: 39 40 41
    declaration_function_body <ast> (53)
        on left: 51
        on right: 30 31 32 33 34 35
    function_call <ast> (54)
        on left: 52
        on right: 87
    function_call_args_or_empty <ast> (55)
        on left: 53 54
        on right: 52
    function_call_args <ast> (56)
        on left: 55 56
        on right: 53 56
    command <ast> (57)
        on left: 57 58 59 60 61 62
        on right: 51 64 101 102 103
    command_block <ast> (58)
        on left: 63
        on right: 61
    command_list <ast> (59)
        on left: 64 65 66
        on right: 63 64 65
    attribution <ast> (60)
        on left: 67 68 69 70
        on right: 57
    expression <ast> (61)
        on left: 71 72 73 74 75 76 77 78 79 80 81 82 83 84 85 86 87 88 89 90
        on right: 11 16 55 56 67 68 69 70 75 76 77 78 79 80 81 82 83 84 85 86 88 89 90 94 95 99 105
    print <ast> (62)
        on left: 91
        on right: 59
    print_rest <ast> (63)
        on left: 92 93 94 95
        on right: 91 93 95
    print_comma <ast> (64)
        on left: 96 97
        on right: 93 95
    return <ast> (65)
        on left: 98
        on right: 60
    return_expression <ast> (66)
        on left: 99 100
        on right: 98
    flux_control <ast> (67)
        on left: 101 102 103 104
        on right: 58
    flux_control_expression <ast> (68)
        on left: 105 106 107
        on right: 101 102 103
    label <ast> (69)
        on left: 108
        on right: 65
    go_to <ast> (70)
        on left: 109
        on right: 104


State 0

    0 $accept: . program $end

    KW_CHAR        shift, and go to state 1
    KW_INT         shift, and go to state 2
    KW_FLOAT       shift, and go to state 3
    TK_IDENTIFIER  shift, and go to state 4

    $default  reduce using rule 3 (declaration_list)

    program                   go to state 5
    declaration_list          go to state 6
    declaration               go to state 7
    declaration_global        go to state 8
    declaration_global_int    go to state 9
    declaration_global_char   go to state 10
    declaration_global_float  go to state 11
    declaration_function      go to state 12


State 1

   16 declaration_global_char: KW_CHAR . TK_IDENTIFIER ':' expression semi_column
   17                        | KW_CHAR . TK_IDENTIFIER '[' LIT_INTEGER ']' semi_column
   18                        | KW_CHAR . TK_IDENTIFIER '[' LIT_INTEGER ']' ':' array_val semi_column
   19                        | KW_CHAR . TK_IDENTIFIER '[' error ']' ':'
   20                        | KW_CHAR . TK_IDENTIFIER error
   31 declaration_function: KW_CHAR . TK_IDENTIFIER '(' declaration_function_args_or_empty ')' declaration_function_body
   34                     | KW_CHAR . error '(' declaration_function_args_or_empty ')' declaration_function_body

    error          shift, and go to state 13
    TK_IDENTIFIER  shift, and go to state 14


State 2

   11 declaration_global_int: KW_INT . TK_IDENTIFIER ':' expression semi_column
   12                       | KW_INT . TK_IDENTIFIER '[' LIT_INTEGER ']' semi_column
   13                       | KW_INT . TK_IDENTIFIER '[' LIT_INTEGER ']' ':' array_val semi_column
   14                       | KW_INT . TK_IDENTIFIER '[' error ']' ':'
   15                       | KW_INT . TK_IDENTIFIER error
   30 declaration_function: KW_INT . TK_IDENTIFIER '(' declaration_function_args_or_empty ')' declaration_function_body
   33                     | KW_INT . error '(' declaration_function_args_or_empty ')' declaration_function_body

    error          shift, and go to state 15
    TK_IDENTIFIER  shift, and go to state 16


State 3

   21 declaration_global_float: KW_FLOAT . TK_IDENTIFIER ':' LIT_INTEGER OPERATOR_DIV LIT_INTEGER semi_column
   22                         | KW_FLOAT . TK_IDENTIFIER '[' LIT_INTEGER ']' semi_column
   23                         | KW_FLOAT . TK_IDENTIFIER '[' error ']'
   24                         | KW_FLOAT . TK_IDENTIFIER error
   32 declaration_function: KW_FLOAT . TK_IDENTIFIER '(' declaration_function_args_or_empty ')' declaration_function_body
   35                     | KW_FLOAT . error '(' declaration_function_args_or_empty ')' declaration_function_body

    error          shift, and go to state 17
    TK_IDENTIFIER  shift, and go to state 18


State 4

   36 declaration_function: TK_IDENTIFIER . '(' declaration_function_args_or_empty ')'

    '('  shift, and go to state 19


State 5

    0 $accept: program . $end

    $end  shift, and go to state 20


State 6

    1 program: declaration_list .

    $default  reduce using rule 1 (program)


State 7

    2 declaration_list: declaration . declaration_list

    KW_CHAR        shift, and go to state 1
    KW_INT         shift, and go to state 2
    KW_FLOAT       shift, and go to state 3
    TK_IDENTIFIER  shift, and go to state 4

    $default  reduce using rule 3 (declaration_list)

    declaration_list          go to state 21
    declaration               go to state 7
    declaration_global        go to state 8
    declaration_global_int    go to state 9
    declaration_global_char   go to state 10
    declaration_global_float  go to state 11
    declaration_function      go to state 12


State 8

    5 declaration: declaration_global .

    $default  reduce using rule 5 (declaration)


State 9

    6 declaration_global: declaration_global_int .

    $default  reduce using rule 6 (declaration_global)


State 10

    7 declaration_global: declaration_global_char .

    $default  reduce using rule 7 (declaration_global)


State 11

    8 declaration_global: declaration_global_float .

    $default  reduce using rule 8 (declaration_global)


State 12

    4 declaration: declaration_function .

    $default  reduce using rule 4 (declaration)


State 13

   34 declaration_function: KW_CHAR error . '(' declaration_function_args_or_empty ')' declaration_function_body

    '('  shift, and go to state 22


State 14

   16 declaration_global_char: KW_CHAR TK_IDENTIFIER . ':' expression semi_column
   17                        | KW_CHAR TK_IDENTIFIER . '[' LIT_INTEGER ']' semi_column
   18                        | KW_CHAR TK_IDENTIFIER . '[' LIT_INTEGER ']' ':' array_val semi_column
   19                        | KW_CHAR TK_IDENTIFIER . '[' error ']' ':'
   20                        | KW_CHAR TK_IDENTIFIER . error
   31 declaration_function: KW_CHAR TK_IDENTIFIER . '(' declaration_function_args_or_empty ')' declaration_function_body

    error  shift, and go to state 23
    ':'    shift, and go to state 24
    '['    shift, and go to state 25
    '('    shift, and go to state 26


State 15

   33 declaration_function: KW_INT error . '(' declaration_function_args_or_empty ')' declaration_function_body

    '('  shift, and go to state 27


State 16

   11 declaration_global_int: KW_INT TK_IDENTIFIER . ':' expression semi_column
   12                       | KW_INT TK_IDENTIFIER . '[' LIT_INTEGER ']' semi_column
   13                       | KW_INT TK_IDENTIFIER . '[' LIT_INTEGER ']' ':' array_val semi_column
   14                       | KW_INT TK_IDENTIFIER . '[' error ']' ':'
   15                       | KW_INT TK_IDENTIFIER . error
   30 declaration_function: KW_INT TK_IDENTIFIER . '(' declaration_function_args_or_empty ')' declaration_function_body

    error  shift, and go to state 28
    ':'    shift, and go to state 29
    '['    shift, and go to state 30
    '('    shift, and go to state 31


State 17

   35 declaration_function: KW_FLOAT error . '(' declaration_function_args_or_empty ')' declaration_function_body

    '('  shift, and go to state 32


State 18

   21 declaration_global_float: KW_FLOAT TK_IDENTIFIER . ':' LIT_INTEGER OPERATOR_DIV LIT_INTEGER semi_column
   22                         | KW_FLOAT TK_IDENTIFIER . '[' LIT_INTEGER ']' semi_column
   23                         | KW_FLOAT TK_IDENTIFIER . '[' error ']'
   24                         | KW_FLOAT TK_IDENTIFIER . error
   32 declaration_function: KW_FLOAT TK_IDENTIFIER . '(' declaration_function_args_or_empty ')' declaration_function_body

    error  shift, and go to state 33
    ':'    shift, and go to state 34
    '['    shift, and go to state 35
    '('    shift, and go to state 36


State 19

   36 declaration_function: TK_IDENTIFIER '(' . declaration_function_args_or_empty ')'

    error     shift, and go to state 37
    KW_CHAR   shift, and go to state 38
    KW_INT    shift, and go to state 39
    KW_FLOAT  shift, and go to state 40

    ')'  reduce using rule 38 (declaration_function_args_or_empty)

    declaration_function_args_or_empty  go to state 41
    declaration_function_args           go to state 42


State 20

    0 $accept: program $end .

    $default  accept


State 21

    2 declaration_list: declaration declaration_list .

    $default  reduce using rule 2 (declaration_list)


State 22

   34 declaration_function: KW_CHAR error '(' . declaration_function_args_or_empty ')' declaration_function_body

    error     shift, and go to state 37
    KW_CHAR   shift, and go to state 38
    KW_INT    shift, and go to state 39
    KW_FLOAT  shift, and go to state 40

    ')'  reduce using rule 38 (declaration_function_args_or_empty)

    declaration_function_args_or_empty  go to state 43
    declaration_function_args           go to state 42


State 23

   20 declaration_global_char: KW_CHAR TK_IDENTIFIER error .

    $default  reduce using rule 20 (declaration_global_char)


State 24

   16 declaration_global_char: KW_CHAR TK_IDENTIFIER ':' . expression semi_column

    error          shift, and go to state 44
    KW_READ        shift, and go to state 45
    TK_IDENTIFIER  shift, and go to state 46
    LIT_INTEGER    shift, and go to state 47
    LIT_CHAR       shift, and go to state 48
    '('            shift, and go to state 49

    function_call  go to state 50
    expression     go to state 51


State 25

   17 declaration_global_char: KW_CHAR TK_IDENTIFIER '[' . LIT_INTEGER ']' semi_column
   18                        | KW_CHAR TK_IDENTIFIER '[' . LIT_INTEGER ']' ':' array_val semi_column
   19                        | KW_CHAR TK_IDENTIFIER '[' . error ']' ':'

    error        shift, and go to state 52
    LIT_INTEGER  shift, and go to state 53


State 26

   31 declaration_function: KW_CHAR TK_IDENTIFIER '(' . declaration_function_args_or_empty ')' declaration_function_body

    error     shift, and go to state 37
    KW_CHAR   shift, and go to state 38
    KW_INT    shift, and go to state 39
    KW_FLOAT  shift, and go to state 40

    ')'  reduce using rule 38 (declaration_function_args_or_empty)

    declaration_function_args_or_empty  go to state 54
    declaration_function_args           go to state 42


State 27

   33 declaration_function: KW_INT error '(' . declaration_function_args_or_empty ')' declaration_function_body

    error     shift, and go to state 37
    KW_CHAR   shift, and go to state 38
    KW_INT    shift, and go to state 39
    KW_FLOAT  shift, and go to state 40

    ')'  reduce using rule 38 (declaration_function_args_or_empty)

    declaration_function_args_or_empty  go to state 55
    declaration_function_args           go to state 42


State 28

   15 declaration_global_int: KW_INT TK_IDENTIFIER error .

    $default  reduce using rule 15 (declaration_global_int)


State 29

   11 declaration_global_int: KW_INT TK_IDENTIFIER ':' . expression semi_column

    error          shift, and go to state 44
    KW_READ        shift, and go to state 45
    TK_IDENTIFIER  shift, and go to state 46
    LIT_INTEGER    shift, and go to state 47
    LIT_CHAR       shift, and go to state 48
    '('            shift, and go to state 49

    function_call  go to state 50
    expression     go to state 56


State 30

   12 declaration_global_int: KW_INT TK_IDENTIFIER '[' . LIT_INTEGER ']' semi_column
   13                       | KW_INT TK_IDENTIFIER '[' . LIT_INTEGER ']' ':' array_val semi_column
   14                       | KW_INT TK_IDENTIFIER '[' . error ']' ':'

    error        shift, and go to state 57
    LIT_INTEGER  shift, and go to state 58


State 31

   30 declaration_function: KW_INT TK_IDENTIFIER '(' . declaration_function_args_or_empty ')' declaration_function_body

    error     shift, and go to state 37
    KW_CHAR   shift, and go to state 38
    KW_INT    shift, and go to state 39
    KW_FLOAT  shift, and go to state 40

    ')'  reduce using rule 38 (declaration_function_args_or_empty)

    declaration_function_args_or_empty  go to state 59
    declaration_function_args           go to state 42


State 32

   35 declaration_function: KW_FLOAT error '(' . declaration_function_args_or_empty ')' declaration_function_body

    error     shift, and go to state 37
    KW_CHAR   shift, and go to state 38
    KW_INT    shift, and go to state 39
    KW_FLOAT  shift, and go to state 40

    ')'  reduce using rule 38 (declaration_function_args_or_empty)

    declaration_function_args_or_empty  go to state 60
    declaration_function_args           go to state 42


State 33

   24 declaration_global_float: KW_FLOAT TK_IDENTIFIER error .

    $default  reduce using rule 24 (declaration_global_float)


State 34

   21 declaration_global_float: KW_FLOAT TK_IDENTIFIER ':' . LIT_INTEGER OPERATOR_DIV LIT_INTEGER semi_column

    LIT_INTEGER  shift, and go to state 61


State 35

   22 declaration_global_float: KW_FLOAT TK_IDENTIFIER '[' . LIT_INTEGER ']' semi_column
   23                         | KW_FLOAT TK_IDENTIFIER '[' . error ']'

    error        shift, and go to state 62
    LIT_INTEGER  shift, and go to state 63


State 36

   32 declaration_function: KW_FLOAT TK_IDENTIFIER '(' . declaration_function_args_or_empty ')' declaration_function_body

    error     shift, and go to state 37
    KW_CHAR   shift, and go to state 38
    KW_INT    shift, and go to state 39
    KW_FLOAT  shift, and go to state 40

    ')'  reduce using rule 38 (declaration_function_args_or_empty)

    declaration_function_args_or_empty  go to state 64
    declaration_function_args           go to state 42


State 37

   45 declaration_function_args: error . TK_IDENTIFIER

    TK_IDENTIFIER  shift, and go to state 65


State 38

   40 declaration_function_args: KW_CHAR . TK_IDENTIFIER fun_args_comma declaration_function_args
   43                          | KW_CHAR . TK_IDENTIFIER
   47                          | KW_CHAR . error

    error          shift, and go to state 66
    TK_IDENTIFIER  shift, and go to state 67


State 39

   39 declaration_function_args: KW_INT . TK_IDENTIFIER fun_args_comma declaration_function_args
   42                          | KW_INT . TK_IDENTIFIER
   46                          | KW_INT . error

    error          shift, and go to state 68
    TK_IDENTIFIER  shift, and go to state 69


State 40

   41 declaration_function_args: KW_FLOAT . TK_IDENTIFIER fun_args_comma declaration_function_args
   44                          | KW_FLOAT . TK_IDENTIFIER
   48                          | KW_FLOAT . error

    error          shift, and go to state 70
    TK_IDENTIFIER  shift, and go to state 71


State 41

   36 declaration_function: TK_IDENTIFIER '(' declaration_function_args_or_empty . ')'

    ')'  shift, and go to state 72


State 42

   37 declaration_function_args_or_empty: declaration_function_args .

    $default  reduce using rule 37 (declaration_function_args_or_empty)


State 43

   34 declaration_function: KW_CHAR error '(' declaration_function_args_or_empty . ')' declaration_function_body

    ')'  shift, and go to state 73


State 44

   90 expression: error . expression

    error          shift, and go to state 44
    KW_READ        shift, and go to state 45
    TK_IDENTIFIER  shift, and go to state 46
    LIT_INTEGER    shift, and go to state 47
    LIT_CHAR       shift, and go to state 48
    '('            shift, and go to state 49

    function_call  go to state 50
    expression     go to state 74


State 45

   74 expression: KW_READ .

    $default  reduce using rule 74 (expression)


State 46

   52 function_call: TK_IDENTIFIER . '(' function_call_args_or_empty ')'
   73 expression: TK_IDENTIFIER .
   75           | TK_IDENTIFIER . '[' expression ']'

    '['  shift, and go to state 75
    '('  shift, and go to state 76

    $default  reduce using rule 73 (expression)


State 47

   71 expression: LIT_INTEGER .

    $default  reduce using rule 71 (expression)


State 48

   72 expression: LIT_CHAR .

    $default  reduce using rule 72 (expression)


State 49

   86 expression: '(' . expression ')'

    error          shift, and go to state 44
    KW_READ        shift, and go to state 45
    TK_IDENTIFIER  shift, and go to state 46
    LIT_INTEGER    shift, and go to state 47
    LIT_CHAR       shift, and go to state 48
    '('            shift, and go to state 49

    function_call  go to state 50
    expression     go to state 77


State 50

   87 expression: function_call .

    $default  reduce using rule 87 (expression)


State 51

   16 declaration_global_char: KW_CHAR TK_IDENTIFIER ':' expression . semi_column
   76 expression: expression . OPERATOR_ADD expression
   77           | expression . OPERATOR_SUB expression
   78           | expression . OPERATOR_MULT expression
   79           | expression . OPERATOR_DIV expression
   80           | expression . OPERATOR_LT expression
   81           | expression . OPERATOR_LTE expression
   82           | expression . OPERATOR_GT expression
   83           | expression . OPERATOR_GTE expression
   84           | expression . OPERATOR_EQ expression
   85           | expression . OPERATOR_DIF expression
   88           | expression . error expression
   89           | expression . error

    error          shift, and go to state 78
    OPERATOR_ADD   shift, and go to state 79
    OPERATOR_SUB   shift, and go to state 80
    OPERATOR_MULT  shift, and go to state 81
    OPERATOR_DIV   shift, and go to state 82
    OPERATOR_LTE   shift, and go to state 83
    OPERATOR_LT    shift, and go to state 84
    OPERATOR_GTE   shift, and go to state 85
    OPERATOR_GT    shift, and go to state 86
    OPERATOR_EQ    shift, and go to state 87
    OPERATOR_DIF   shift, and go to state 88
    ';'            shift, and go to state 89

    semi_column  go to state 90


State 52

   19 declaration_global_char: KW_CHAR TK_IDENTIFIER '[' error . ']' ':'

    ']'  shift, and go to state 91


State 53

   17 declaration_global_char: KW_CHAR TK_IDENTIFIER '[' LIT_INTEGER . ']' semi_column
   18                        | KW_CHAR TK_IDENTIFIER '[' LIT_INTEGER . ']' ':' array_val semi_column

    ']'  shift, and go to state 92


State 54

   31 declaration_function: KW_CHAR TK_IDENTIFIER '(' declaration_function_args_or_empty . ')' declaration_function_body

    ')'  shift, and go to state 93


State 55

   33 declaration_function: KW_INT error '(' declaration_function_args_or_empty . ')' declaration_function_body

    ')'  shift, and go to state 94


State 56

   11 declaration_global_int: KW_INT TK_IDENTIFIER ':' expression . semi_column
   76 expression: expression . OPERATOR_ADD expression
   77           | expression . OPERATOR_SUB expression
   78           | expression . OPERATOR_MULT expression
   79           | expression . OPERATOR_DIV expression
   80           | expression . OPERATOR_LT expression
   81           | expression . OPERATOR_LTE expression
   82           | expression . OPERATOR_GT expression
   83           | expression . OPERATOR_GTE expression
   84           | expression . OPERATOR_EQ expression
   85           | expression . OPERATOR_DIF expression
   88           | expression . error expression
   89           | expression . error

    error          shift, and go to state 78
    OPERATOR_ADD   shift, and go to state 79
    OPERATOR_SUB   shift, and go to state 80
    OPERATOR_MULT  shift, and go to state 81
    OPERATOR_DIV   shift, and go to state 82
    OPERATOR_LTE   shift, and go to state 83
    OPERATOR_LT    shift, and go to state 84
    OPERATOR_GTE   shift, and go to state 85
    OPERATOR_GT    shift, and go to state 86
    OPERATOR_EQ    shift, and go to state 87
    OPERATOR_DIF   shift, and go to state 88
    ';'            shift, and go to state 89

    semi_column  go to state 95


State 57

   14 declaration_global_int: KW_INT TK_IDENTIFIER '[' error . ']' ':'

    ']'  shift, and go to state 96


State 58

   12 declaration_global_int: KW_INT TK_IDENTIFIER '[' LIT_INTEGER . ']' semi_column
   13                       | KW_INT TK_IDENTIFIER '[' LIT_INTEGER . ']' ':' array_val semi_column

    ']'  shift, and go to state 97


State 59

   30 declaration_function: KW_INT TK_IDENTIFIER '(' declaration_function_args_or_empty . ')' declaration_function_body

    ')'  shift, and go to state 98


State 60

   35 declaration_function: KW_FLOAT error '(' declaration_function_args_or_empty . ')' declaration_function_body

    ')'  shift, and go to state 99


State 61

   21 declaration_global_float: KW_FLOAT TK_IDENTIFIER ':' LIT_INTEGER . OPERATOR_DIV LIT_INTEGER semi_column

    OPERATOR_DIV  shift, and go to state 100


State 62

   23 declaration_global_float: KW_FLOAT TK_IDENTIFIER '[' error . ']'

    ']'  shift, and go to state 101


State 63

   22 declaration_global_float: KW_FLOAT TK_IDENTIFIER '[' LIT_INTEGER . ']' semi_column

    ']'  shift, and go to state 102


State 64

   32 declaration_function: KW_FLOAT TK_IDENTIFIER '(' declaration_function_args_or_empty . ')' declaration_function_body

    ')'  shift, and go to state 103


State 65

   45 declaration_function_args: error TK_IDENTIFIER .

    $default  reduce using rule 45 (declaration_function_args)


State 66

   47 declaration_function_args: KW_CHAR error .

    $default  reduce using rule 47 (declaration_function_args)


State 67

   40 declaration_function_args: KW_CHAR TK_IDENTIFIER . fun_args_comma declaration_function_args
   43                          | KW_CHAR TK_IDENTIFIER .

    error  shift, and go to state 104
    ','    shift, and go to state 105

    ')'  reduce using rule 43 (declaration_function_args)

    fun_args_comma  go to state 106


State 68

   46 declaration_function_args: KW_INT error .

    $default  reduce using rule 46 (declaration_function_args)


State 69

   39 declaration_function_args: KW_INT TK_IDENTIFIER . fun_args_comma declaration_function_args
   42                          | KW_INT TK_IDENTIFIER .

    error  shift, and go to state 104
    ','    shift, and go to state 105

    ')'  reduce using rule 42 (declaration_function_args)

    fun_args_comma  go to state 107


State 70

   48 declaration_function_args: KW_FLOAT error .

    $default  reduce using rule 48 (declaration_function_args)


State 71

   41 declaration_function_args: KW_FLOAT TK_IDENTIFIER . fun_args_comma declaration_function_args
   44                          | KW_FLOAT TK_IDENTIFIER .

    error  shift, and go to state 104
    ','    shift, and go to state 105

    ')'  reduce using rule 44 (declaration_function_args)

    fun_args_comma  go to state 108


State 72

   36 declaration_function: TK_IDENTIFIER '(' declaration_function_args_or_empty ')' .

    $default  reduce using rule 36 (declaration_function)


State 73

   34 declaration_function: KW_CHAR error '(' declaration_function_args_or_empty ')' . declaration_function_body

    KW_IF          shift, and go to state 109
    KW_WHILE       shift, and go to state 110
    KW_GOTO        shift, and go to state 111
    KW_PRINT       shift, and go to state 112
    KW_RETURN      shift, and go to state 113
    TK_IDENTIFIER  shift, and go to state 114
    '{'            shift, and go to state 115

    TK_IDENTIFIER  [reduce using rule 62 (command)]
    $default       reduce using rule 62 (command)

    declaration_function_body  go to state 116
    command                    go to state 117
    command_block              go to state 118
    attribution                go to state 119
    print                      go to state 120
    return                     go to state 121
    flux_control               go to state 122
    go_to                      go to state 123


State 74

   76 expression: expression . OPERATOR_ADD expression
   77           | expression . OPERATOR_SUB expression
   78           | expression . OPERATOR_MULT expression
   79           | expression . OPERATOR_DIV expression
   80           | expression . OPERATOR_LT expression
   81           | expression . OPERATOR_LTE expression
   82           | expression . OPERATOR_GT expression
   83           | expression . OPERATOR_GTE expression
   84           | expression . OPERATOR_EQ expression
   85           | expression . OPERATOR_DIF expression
   88           | expression . error expression
   89           | expression . error
   90           | error expression .

    error          shift, and go to state 124
    OPERATOR_ADD   shift, and go to state 79
    OPERATOR_SUB   shift, and go to state 80
    OPERATOR_MULT  shift, and go to state 81
    OPERATOR_DIV   shift, and go to state 82
    OPERATOR_LTE   shift, and go to state 83
    OPERATOR_LT    shift, and go to state 84
    OPERATOR_GTE   shift, and go to state 85
    OPERATOR_GT    shift, and go to state 86
    OPERATOR_EQ    shift, and go to state 87
    OPERATOR_DIF   shift, and go to state 88
